# kospi_kosdaq_livermore_pearl_screener

./: .gitattributes  .gitignore  README.md  dashboard.py  main.py  pyproject.toml  requirements.txt  scanner.py
.github/workflows/: scanner.yml  screener.yml
output/: fetch_time.txt  latest.csv
